feat: created handlebars for front-end and render homepage, login, and signup but cannot seem to login to dashboard.handlebars, needs further testing

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,20 @@
 <main>
-    <h1>Login</h1>
-    <form id="login-form" method="POST"> <!--specify POST otherwise default to GET-->
+    <h1>Sign Up</h1>
+    <form id="signup-form">
         <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
         </div>
         <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">Sign Up</button>
     </form>
-    <!--provide option to sign-up if new user-->
-    <h3>Don't have an account? <a href="/signup">Sign up here!</a></h3>
+    <script src="/public/js/signup.js"></script>
 </main>
-<script src="/public/js/login.js"></script>
+
