--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,18 @@
-{{!--this file is the default appearance of the page without requiring backend auth--}}
+{{!this file is the default appearance of the page without requiring backend auth}}
 
-<main class="container container-fluid mt-5">
-    {{#each posts as |post|}}
-    <div class="row align-center mb-5">
-        <div class="col-md-6">
-            <h2>{{post.title}}</h2>
-            {{!-- <p>{{post.createdAt}}</p> --}}
-        </div>
-        <div class="col-md-6">
-            <p>{{post.content}}</p>
-        </div>
+<main class="container mt-5">
+  {{#each posts as |post|}}
+    <div class="row align-items-center mb-5 border p-3 rounded">
+      <div class="col-md-8">
+        <h2 class="h4">{{post.title}}</h2>
+        <p>{{post.content}}</p>
+      </div>
     </div>
-    {{/each}}
+  {{/each}}
 </main>
 
 {{#if logged_in}}
-<script src="../public/js/logout.js"></script>
+  <script src="/js/logout.js"></script>
 {{/if}}
 
 <!-- THIS RENDERS SIMPLE SEED DATA ON BROWSER
