--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,40 +1,49 @@
-<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Debug De Blog</title>
-    <link rel="stylesheet" href="/public/css/style.css">
-</head>
-
-<body>
-    <header class="display-flex justify-space-between align-center p-2">
-        <h1>
-            Debug De Blog: Develop Your Thoughts
-        </h1>
-        <nav> <!--nav bar that changes with login/logout state-->
-            <a href="/" class="nav-link">Home</a>
-            <a href="/dashboard" class="nav-link">Dashboard</a> <!--is this the right path-->
-            {{#if logged_in}}
-                <button class="btn" id="logout">Logout</button>
-            {{else}}
-                <a href="/login" class="nav-link">Login</a>
-            {{/if}}
-        </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{title}}</title>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header class="d-flex justify-content-between align-items-center p-2">
+      <h1>Debug De Blog: Develop Your Thoughts</h1>
+      <nav>
+        <!-- Navigation bar -->
+        <a href="/" class="nav-link">Home</a>
+        <a href="/dashboard" class="nav-link">Dashboard</a>
+        {{#if logged_in}}
+          <button class="btn btn-outline-primary" id="logout">Logout</button>
+        {{else}}
+          <a href="/login" class="nav-link">Login</a>
+        {{/if}}
+      </nav>
     </header>
-    <main class="container container-fluid mt-5">
-        {{{ body }}}
+    <main class="container mt-5">
+      {{{body}}}
     </main>
-    <footer>
-        <h3>
-            Copyright (c) 2024 scurvyirv
-        </h3>
+    <footer class="text-center mt-5">
+      <h3>Copyright (c) 2024 scurvyirv</h3>
     </footer>
-
-    {{#if logged_in}}
-    <script src="/public/js/logout.js"></script>
-    {{/if}}
-</body>
-
+    <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    ></script>
+    <!-- Your custom JS files -->
+    <script src="/js/comment.js"></script>
+    <script src="/js/dashboard.js"></script>
+    <script src="/js/login.js"></script>
+    <script src="/js/logout.js"></script>
+    <script src="/js/post.js"></script>
+    <script src="/js/signup.js"></script>
+  </body>
 </html>
