--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,11 +39,11 @@
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     ></script>
     <!-- Your custom JS files -->
-    <script src="/js/comment.js"></script>
+    {{! <script src="/js/comment.js"></script>
     <script src="/js/dashboard.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/logout.js"></script>
     <script src="/js/post.js"></script>
-    <script src="/js/signup.js"></script>
+    <script src="/js/signup.js"></script> }}
   </body>
 </html>
