--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,19 @@
 <main>
-    <h1>Sign Up</h1>
-    <form id="signup-form">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit">Sign Up</button>
-    </form>
-    <script src="/public/js/signup.js"></script>
+  <h1>Sign Up</h1>
+  <form id="signup-form">
+    <div>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required />
+    </div>
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+    </div>
+    <button type="submit">Sign Up</button>
+  </form>
+  <script src="/js/signup.js"></script>
 </main>
-
